// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SamwiseIcon matches snapshot. 1`] = `
<span
  onKeyUp={[Function]}
  role="button"
  tabIndex={0}
  title="alert"
>
  <img
    alt="alert"
    className="SamwiseIconDefaultStyle"
    src="/svgs/alert.svg"
  />
</span>
`;

exports[`SamwiseIcon matches snapshot. 2`] = `
<span
  onKeyUp={[Function]}
  role="button"
  tabIndex={0}
  title="Due date"
>
  <img
    alt="Due date"
    className="SamwiseIconDefaultStyle"
    src="/svgs/calendar-dark.svg"
  />
</span>
`;

exports[`SamwiseIcon matches snapshot. 3`] = `
<span
  onKeyUp={[Function]}
  role="button"
  tabIndex={0}
  title="Due date"
>
  <img
    alt="Due date"
    className="SamwiseIconDefaultStyle"
    src="/svgs/calendar-light.svg"
  />
</span>
`;

exports[`SamwiseIcon matches snapshot. 4`] = `
<span
  onKeyUp={[Function]}
  role="button"
  tabIndex={0}
  title="Checked"
>
  <img
    alt="Checked"
    className="SamwiseIconDefaultStyle"
    src="/svgs/checked-dark.svg"
  />
</span>
`;

exports[`SamwiseIcon matches snapshot. 5`] = `
<span
  onKeyUp={[Function]}
  role="button"
  tabIndex={0}
  title="Checked"
>
  <img
    alt="Checked"
    className="SamwiseIconDefaultStyle"
    src="/svgs/checked.svg"
  />
</span>
`;

exports[`SamwiseIcon matches snapshot. 6`] = `
<span
  onKeyUp={[Function]}
  role="button"
  tabIndex={0}
  title="clock"
>
  <img
    alt="clock"
    className="SamwiseIconDefaultStyle"
    src="/svgs/clock.svg"
  />
</span>
`;

exports[`SamwiseIcon matches snapshot. 7`] = `
<span
  onKeyUp={[Function]}
  role="button"
  tabIndex={0}
  title="Reorder"
>
  <img
    alt="Reorder"
    className="SamwiseIconDefaultStyle"
    src="/svgs/grabbers.svg"
  />
</span>
`;

exports[`SamwiseIcon matches snapshot. 8`] = `
<span
  onKeyUp={[Function]}
  role="button"
  tabIndex={0}
  title="Hide"
>
  <img
    alt="Hide"
    className="SamwiseIconDefaultStyle"
    src="/svgs/hide.svg"
  />
</span>
`;

exports[`SamwiseIcon matches snapshot. 9`] = `
<span
  onKeyUp={[Function]}
  role="button"
  tabIndex={0}
  title="Unpin from Focus"
>
  <img
    alt="Unpin from Focus"
    className="SamwiseIconDefaultStyle"
    src="/svgs/pin-2-dark-filled.svg"
  />
</span>
`;

exports[`SamwiseIcon matches snapshot. 10`] = `
<span
  onKeyUp={[Function]}
  role="button"
  tabIndex={0}
  title="Pin to Focus"
>
  <img
    alt="Pin to Focus"
    className="SamwiseIconDefaultStyle"
    src="/svgs/pin-2-dark-outline.svg"
  />
</span>
`;

exports[`SamwiseIcon matches snapshot. 11`] = `
<span
  onKeyUp={[Function]}
  role="button"
  tabIndex={0}
  title="Unpin from Focus"
>
  <img
    alt="Unpin from Focus"
    className="SamwiseIconDefaultStyle"
    src="/svgs/pin-2-light-filled.svg"
  />
</span>
`;

exports[`SamwiseIcon matches snapshot. 12`] = `
<span
  onKeyUp={[Function]}
  role="button"
  tabIndex={0}
  title="Pin to Focus"
>
  <img
    alt="Pin to Focus"
    className="SamwiseIconDefaultStyle"
    src="/svgs/pin-2-light-outline.svg"
  />
</span>
`;

exports[`SamwiseIcon matches snapshot. 13`] = `
<span
  onKeyUp={[Function]}
  role="button"
  tabIndex={0}
  title="Settings"
>
  <img
    alt="Settings"
    className="SamwiseIconDefaultStyle"
    src="/svgs/settings.svg"
  />
</span>
`;

exports[`SamwiseIcon matches snapshot. 14`] = `
<span
  onKeyUp={[Function]}
  role="button"
  tabIndex={0}
  title="Show"
>
  <img
    alt="Show"
    className="SamwiseIconDefaultStyle"
    src="/svgs/show.svg"
  />
</span>
`;

exports[`SamwiseIcon matches snapshot. 15`] = `
<span
  onKeyUp={[Function]}
  role="button"
  tabIndex={0}
  title="Tag"
>
  <img
    alt="Tag"
    className="SamwiseIconDefaultStyle"
    src="/svgs/tag.svg"
  />
</span>
`;

exports[`SamwiseIcon matches snapshot. 16`] = `
<span
  onKeyUp={[Function]}
  role="button"
  tabIndex={0}
  title="unchecked"
>
  <img
    alt="unchecked"
    className="SamwiseIconDefaultStyle"
    src="/svgs/unchecked.svg"
  />
</span>
`;

exports[`SamwiseIcon matches snapshot. 17`] = `
<span
  onKeyUp={[Function]}
  role="button"
  tabIndex={0}
  title="More"
>
  <img
    alt="More"
    className="SamwiseIconDefaultStyle"
    src="/svgs/v.svg"
  />
</span>
`;

exports[`SamwiseIcon matches snapshot. 18`] = `
<span
  onKeyUp={[Function]}
  role="button"
  tabIndex={0}
  title="Delete"
>
  <img
    alt="Delete"
    className="SamwiseIconDefaultStyle"
    src="/svgs/XDark.svg"
  />
</span>
`;

exports[`SamwiseIcon matches snapshot. 19`] = `
<span
  onKeyUp={[Function]}
  role="button"
  tabIndex={0}
  title="Delete"
>
  <img
    alt="Delete"
    className="SamwiseIconDefaultStyle"
    src="/svgs/XLight.svg"
  />
</span>
`;
